# globalHelioseismology

./: .gitignore  README.md  README.tex.md  cs_data.py  global_vars.py  raw_data.py  setup.cfg  setup.py  smooth_spectra.py
docs/: conf.py  modules.rst  renameTimeSeries.rst
docs/_build/doctrees/: environment.pickle  globalHelioseismology.doctree  index.doctree  modules.doctree  renameTimeSeries.doctree
docs/_build/html/: .buildinfo  genindex.html  globalHelioseismology.html  index.html  modules.html  objects.inv  renameTimeSeries.html  search.html  searchindex.js
docs/_build/html/_sources/: globalHelioseismology.rst.txt  index.rst.txt
jobscripts/: create_cs_scripts.py  create_submit_cs_jobs.py  cs_compute.py  gnup_cs_00.sh  gnup_cs_01.sh  ipjobs_cs_00.sh  submit_jobs.py
mode-params/: hmi.6328.36  hmi.6400.36  hmi.6472.36  hmi.6544.36  hmi.6616.36  hmi.6688.36  hmi.6760.36  hmi.6832.36  hmi.6904.36  hmi.6976.36  hmi.7048.36  hmi.7120.36  hmi.7192.36  hmi.7264.36  hmi.7336.36  hmi.7408.36  hmi.7480.36  hmi.7552.36  hmi.7624.36  hmi.7696.36  hmi.7768.36  hmi.7840.36  hmi.7912.36  hmi.7984.36  hmi.8056.36  hmi.8128.36  hmi.8200.36  hmi.8272.36  hmi.8344.36  hmi.8416.36  hmi.8488.36  hmi.8560.36  hmi.8632.36  hmi.8704.36  hmi.8776.36  hmi.8848.36  hmi.8920.36  hmi.8992.36  hmi.9064.36  hmi.9136.36  (+1 more)
notebooks/: cross-spectra.ipynb
old-files/: cs_data.py  generate_plots.sh  smooth_spectra2.py
src/: functions.py  globalvars.py
src/globalHelioseismology/: __init__.py  ctol.py  global_vars.py  globalvars.py  raw_spectra.py  spectra.py
