[metadata]
name = globalHelioseismology
description = Helioseismic cross-spectra from HMI, MDI and GONG
long_description = file: README.rst
author = Samarth Ganesh Kashyap
author_email = g.samarth@tifr.res.in
url = https://link-to-your-project
license = BSD 3-Clause License
version = 0.5

[options]
zip_safe = False
packages = find:
install_requires =
    numpy
	scipy
	matplotlib
    astropy
